Bug 103897 - No space between template previews from Start Center
Summary: No space between template previews from Start Center
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-11-12 23:29 UTC by Thorsten Wagner
Modified: 2016-11-25 08:49 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (93.84 KB, image/tiff)
2016-11-12 23:29 UTC, Thorsten Wagner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Wagner 2016-11-12 23:29:06 UTC
Created attachment 128708 [details]
Screenshot

Space between template previews has been lost (see attached screenshot). Issue seems to be present on OS X as well as on Linux at least. Issue depends on Start Center window size.

Steps to reproduce:

(1) Open "Templates" from Start Center

(2) Resize window and take a look at spacing between previews of Impress presentations
Comment 1 Xisco Faulí 2016-11-14 11:49:10 UTC
Confirmed in

Version: 5.3.0.0.alpha1+
Build ID: 8dc495c93239739629683bb29e4110f5c57c94f0
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2016-09-15 12:36:33 (GMT)
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2016-09-16 06:19:38 (GMT)
commit 96e9ffa64706f523d67659a20a0ccce6fbd0cb91 (patch)
tree 81b9eaa904d20da4b6d3997a4cb69b29416c12c9
parent 7fc7fad400c619e518448ee521b2aba099dccf9b (diff)

loplogin:singlevalfields in include/

Adding Cc: to Noel Grandin
Comment 2 Commit Notification 2016-11-14 12:20:07 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=65ba7e4dc4eac174bbf02570d6a43803b7b681ff

tdf#103897 No space between template previews from Start Center

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.