tdf#103897 No space between template previews from Start Center

regression from
	commit	96e9ffa64706f523d67659a20a0ccce6fbd0cb91 (patch)
	loplogin:singlevalfields in include/

I did not notice that the mnItemPadding field was shadowing a
declaration in a superclass

Change-Id: I52cf9945da43fa3d1049b624a6b24bc6d974d445